// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`danger banner 1`] = `
<Banner
  aria-label="danger"
  variant="danger"
>
  <div
    aria-label="danger"
    className="pf-c-banner pf-m-danger"
  >
    danger
     Banner
  </div>
</Banner>
`;

exports[`default banner 1`] = `
<Banner
  aria-label="default"
  variant="default"
>
  <div
    aria-label="default"
    className="pf-c-banner"
  >
    default
     Banner
  </div>
</Banner>
`;

exports[`info banner 1`] = `
<Banner
  aria-label="info"
  variant="info"
>
  <div
    aria-label="info"
    className="pf-c-banner pf-m-info"
  >
    info
     Banner
  </div>
</Banner>
`;

exports[`sticky banner 1`] = `
<Banner
  aria-label="sticky"
  isSticky={true}
>
  <div
    aria-label="sticky"
    className="pf-c-banner pf-m-sticky"
  >
    Sticky Banner
  </div>
</Banner>
`;

exports[`success banner 1`] = `
<Banner
  aria-label="success"
  variant="success"
>
  <div
    aria-label="success"
    className="pf-c-banner pf-m-success"
  >
    success
     Banner
  </div>
</Banner>
`;

exports[`warning banner 1`] = `
<Banner
  aria-label="warning"
  variant="warning"
>
  <div
    aria-label="warning"
    className="pf-c-banner pf-m-warning"
  >
    warning
     Banner
  </div>
</Banner>
`;
